// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses all xlsx files by pattern 1`] = `
[
  {
    "formatted": {
      "arr": [
        "test",
      ],
      "obj": {
        "A": "test",
      },
    },
    "header": [],
    "processedSheetSize": 454,
    "raw": {
      "arr": [
        "test",
      ],
      "obj": {
        "A": "test",
      },
    },
    "totalSheetSize": 454,
  },
]
`;

exports[`parses multiple sheets 1`] = `
[
  {
    "formatted": {
      "arr": [
        "test3",
      ],
      "obj": {
        "A": "test3",
      },
    },
    "header": [],
    "processedSheetSize": 455,
    "raw": {
      "arr": [
        "test3",
      ],
      "obj": {
        "A": "test3",
      },
    },
    "totalSheetSize": 455,
  },
  {
    "formatted": {
      "arr": [
        "test2",
      ],
      "obj": {
        "A": "test2",
      },
    },
    "header": [],
    "processedSheetSize": 455,
    "raw": {
      "arr": [
        "test2",
      ],
      "obj": {
        "A": "test2",
      },
    },
    "totalSheetSize": 455,
  },
  {
    "formatted": {
      "arr": [
        "test1",
      ],
      "obj": {
        "A": "test1",
      },
    },
    "header": [],
    "processedSheetSize": 455,
    "raw": {
      "arr": [
        "test1",
      ],
      "obj": {
        "A": "test1",
      },
    },
    "totalSheetSize": 455,
  },
]
`;

exports[`parses specific sheet by function 1`] = `
[
  {
    "formatted": {
      "arr": [
        "test3",
      ],
      "obj": {
        "A": "test3",
      },
    },
    "header": [],
    "processedSheetSize": 455,
    "raw": {
      "arr": [
        "test3",
      ],
      "obj": {
        "A": "test3",
      },
    },
    "totalSheetSize": 455,
  },
]
`;

exports[`parses specific sheet by index 1`] = `
[
  {
    "formatted": {
      "arr": [
        "test3",
      ],
      "obj": {
        "A": "test3",
      },
    },
    "header": [],
    "processedSheetSize": 455,
    "raw": {
      "arr": [
        "test3",
      ],
      "obj": {
        "A": "test3",
      },
    },
    "totalSheetSize": 455,
  },
]
`;

exports[`parses specific sheet by name 1`] = `
[
  {
    "formatted": {
      "arr": [
        "test2",
      ],
      "obj": {
        "A": "test2",
      },
    },
    "header": [],
    "processedSheetSize": 455,
    "raw": {
      "arr": [
        "test2",
      ],
      "obj": {
        "A": "test2",
      },
    },
    "totalSheetSize": 455,
  },
]
`;

exports[`parses xlsx with header 1`] = `
[
  {
    "formatted": {
      "arr": [
        "hello",
        "world",
      ],
      "obj": {
        "column1": "hello",
        "column2": "world",
      },
    },
    "header": [
      "column1",
      "column2",
    ],
    "processedSheetSize": 584,
    "raw": {
      "arr": [
        "hello",
        "world",
      ],
      "obj": {
        "column1": "hello",
        "column2": "world",
      },
    },
    "totalSheetSize": 584,
  },
]
`;

exports[`parses xlsx without header 1`] = `
[
  {
    "formatted": {
      "arr": [
        "hello",
        "world",
      ],
      "obj": {
        "A": "hello",
        "B": "world",
      },
    },
    "header": [],
    "processedSheetSize": 495,
    "raw": {
      "arr": [
        "hello",
        "world",
      ],
      "obj": {
        "A": "hello",
        "B": "world",
      },
    },
    "totalSheetSize": 495,
  },
]
`;

exports[`respects rowLimit 1`] = `
[
  {
    "formatted": {
      "arr": [
        1,
      ],
      "obj": {
        "A": 1,
      },
    },
    "header": [],
    "processedSheetSize": 598,
    "raw": {
      "arr": [
        1,
      ],
      "obj": {
        "A": 1,
      },
    },
    "totalSheetSize": 598,
  },
  {
    "formatted": {
      "arr": [
        2,
      ],
      "obj": {
        "A": 2,
      },
    },
    "header": [],
    "processedSheetSize": 598,
    "raw": {
      "arr": [
        2,
      ],
      "obj": {
        "A": 2,
      },
    },
    "totalSheetSize": 598,
  },
  {
    "formatted": {
      "arr": [
        3,
      ],
      "obj": {
        "A": 3,
      },
    },
    "header": [],
    "processedSheetSize": 598,
    "raw": {
      "arr": [
        3,
      ],
      "obj": {
        "A": 3,
      },
    },
    "totalSheetSize": 598,
  },
]
`;
